# cpp-thread-pool

./: .gitignore  CMakeLists.txt  LICENSE  README(1).md  README.md
.github/workflows/: ci.yml
benchmarks/: bench_thread_pool.cpp
cmake/: CortexThreadpoolConfig.cmake.in
docs/: BENCHMARK_TASK_SIZES.md  BENCHMARK_THREAD_COUNT.md
include/: cancellation_token.hpp  priority.hpp  priority_task_queue.hpp  task.hpp  task_group.hpp  task_queue.hpp  thread_pool.hpp  timed_future.hpp  worker.hpp
results/: task_size_benchmark.csv  thread_benchmark.csv
scripts/: benchmark_threads.py  benchmark_threads.sh  plot_threads.py  run_task_benchmarks.py
src/: main.cpp  task_queue.cpp  thread_pool.cpp  worker.cpp
tests/: test_advanced.cpp  test_priority_queue.cpp  test_task_queue.cpp  test_thread_pool.cpp  test_timeout.cpp
